--- a/second/second.csproj
+++ b/second/second.csproj
@@ -46,6 +46,7 @@
     <Compile Include="CommunicationFacade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TerminateException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
