--- a/second/second.csproj
+++ b/second/second.csproj
@@ -44,9 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommunicationFacade.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Downloader.cs" />
+    <Compile Include="InitActions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminateException.cs" />
+    <Compile Include="Uploader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
