--- a/second/second.csproj
+++ b/second/second.csproj
@@ -46,10 +46,11 @@
     <Compile Include="CommunicationFacade.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Downloader.cs" />
+    <Compile Include="Exceptions\MaximumAttempException.cs" />
     <Compile Include="InitActions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TerminateException.cs" />
+    <Compile Include="Exceptions\TerminateException.cs" />
     <Compile Include="Uploader.cs" />
   </ItemGroup>
   <ItemGroup>
