--- a/second/second.csproj
+++ b/second/second.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Downloader.cs" />
     <Compile Include="Exceptions\MaximumAttempException.cs" />
     <Compile Include="InitActions.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Packets\BasePacket.cs" />
+    <Compile Include="Packets\DownloadPacket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions\TerminateException.cs" />
