--- a/second/second.csproj
+++ b/second/second.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Packets\BasePacket.cs" />
     <Compile Include="Packets\DownloadPacket.cs" />
+    <Compile Include="Packets\CommunicationPacket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions\TerminateException.cs" />
