Writed test to compute over edge of required

--- a/SecondTester/SecondTester.csproj
+++ b/SecondTester/SecondTester.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\second\second.csproj">
+      <Project>{7da8521d-0c89-4f69-90df-d0c2f4b52c94}</Project>
+      <Name>second</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
