--- a/second/second.csproj
+++ b/second/second.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CommunicationFacade.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Downloader.cs" />
+    <Compile Include="Exceptions\CommunicationException.cs" />
     <Compile Include="Exceptions\MaximumAttempException.cs" />
     <Compile Include="InitActions.cs" />
     <Compile Include="Logger.cs" />
