--- a/SecondTester/SecondTester.csproj
+++ b/SecondTester/SecondTester.csproj
@@ -45,11 +45,14 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DownloaderBeforeExpected.cs" />
     <Compile Include="DownloaderSecondEdge.cs" />
     <Compile Include="DownloaderEdge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
