--- a/second/second.csproj
+++ b/second/second.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions\TerminateException.cs" />
+    <Compile Include="TimeMeasure.cs" />
     <Compile Include="Uploader.cs" />
   </ItemGroup>
   <ItemGroup>
