--- a/second/second.csproj
+++ b/second/second.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Downloader.cs" />
     <Compile Include="Exceptions\CommunicationException.cs" />
     <Compile Include="Exceptions\InvalidPacketException.cs" />
+    <Compile Include="Exceptions\InvalidPacketNumberException.cs" />
     <Compile Include="Exceptions\MaximumAttempException.cs" />
     <Compile Include="InitActions.cs" />
     <Compile Include="Logger.cs" />
